# DouyinLiveWebFetcher-Web

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.MD  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  rooms.py
crawler/: __init__.py  fetcher.py  signature.py
docker/mysql/conf.d/: custom.cnf
docker/mysql/init/: .gitkeep
models/: __init__.py  database.py
protobuf/: douyin_pb2.py
scripts/: download-levels.sh  init-db.sh  install.sh  run.sh
services/: data_service.py  room_manager.py  scheduler_service.py
static/js/: index.js  room.js  stats.js
templates/: index.html  room.html  stats.html
utils/: __init__.py  download_fansclub.py  download_level.py  jitter.py  logger.py  status_display.py
ws_handlers/: __init__.py  handlers.py
